Adding configuration files

--- a/greeting-service/application-prod.yml
+++ b/greeting-service/application-prod.yml
@@ -5,5 +5,5 @@ management:
         include:
           - '*'
 greeting-service:
-  greeting: "Ciao"
+  greeting: "Pronto"
   default-value: "Mondo"
